<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>core</artifactId>
        <groupId>org.sunbird</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.sunbird</groupId>
	<artifactId>sunbird-es-utils</artifactId>
	<version>1.0-SNAPSHOT</version>
	<name>Sunbird ElasticSearch Utils</name>

	<properties>
        <maven.compiler.release>11</maven.compiler.release>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<scoverage.plugin.version>1.1.1</scoverage.plugin.version>
	</properties>
	<dependencies>
        <dependency>
            <groupId>org.sunbird</groupId>
            <artifactId>platform-common</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
	  <!--  added for rest client -->
	    <dependency>
			<groupId>org.elasticsearch.client</groupId>
			<artifactId>elasticsearch-rest-high-level-client</artifactId>
			<version>6.3.2</version>
        </dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.8.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.8.2</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
		<testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                      <release>11</release>
                    </configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M4</version>
					<configuration>
                        <argLine>--illegal-access=permit</argLine>
						<argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
						<includes>
							<include>**/*Spec.java</include>
							<include>**/*Test.java</include>
						</includes>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>